# python-tempo

./: conftest.py  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build.yml
.run/: pytest.run.xml
docs/source/: conf.py
src/tempo/: recurrentevent.py  recurrenteventset.py  sparseinterval.py  timeutils.py  unit.py
src/tempo/django/: fields.py  forms.py  widgets.py
src/tempo/rest_framework/: serializers.py
tests/: data.py  test_recurrentevent.py  test_recurrenteventset.py  utils.py
tests/test_django/: test_fields.py  test_queries.py
tests/test_django/aproject/anapp/: admin.py
tests/test_django/aproject/anapp/migrations/: 0002_nullablemodel.py
tests/test_rest_framework/: test_serializers.py
