[tool.poetry]
name = "tempo"
version = "0.1.0"
description = ""
authors = ["Samuel Bishop <sam@oneqone.com>"]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-cache = "^1.0"
pytest-django = "3.5.1"
psycopg2-binary = "^2.9.3"
Django = ">=1.8,<1.9"
djangorestframework = ">=3.2,<3.3"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
